--- a/package.json
+++ b/package.json
@@ -5,12 +5,29 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8001",
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hcaptcha/react-hcaptcha": "^1.8.1",
+    "@mui/material": "^5.13.4",
+    "@mui/x-date-pickers": "^6.6.0",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "axios": "^1.4.0",
+    "bignumber.js": "^9.1.1",
+    "dayjs": "^1.11.8",
+    "ethers": "5.6.4",
+    "hcaptcha": "^0.1.1",
+    "moment": "^2.29.4",
     "next": "13.4.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-datetime": "^3.2.0",
+    "react-dom": "18.2.0",
+    "react-select": "^5.7.3",
+    "react-toastify": "^9.1.3",
+    "reactflow": "^11.7.2",
+    "web3": "^1.10.0"
   }
 }
